syntax = "proto3";
package littlehorse;

option java_multiple_files = true;
option java_package = "io.littlehorse.canary.proto";

// Avg. aggregator use in tables
message AverageAggregator {
  int64 count = 1;
  double sum = 2;
  double avg = 3;
  double max = 4;
}
